Added ShareActionProvider - it will take the text and share it other app's like Gmail , drive ,whatsapp etc.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">BroadcastRecv</string>
+    <string name="battery_fragment">Battery Fragment</string>
+    <string name="notefragment">NoteFragment</string>
+    <string name="button">Button</string>
+    <string name="x">X</string>
 </resources>
